examples/bad/type6.swifty
//mismatched function arg
func foo(n:int) {
   print n
}

print foo(true)
